[package]
name = "cmeans-rs"
version = "0.1.2"
edition = "2024"
authors = ["kostas passadis <kpassadis@gmail.com>"]
description = "A high-performance Rust crate for soft clustering and subspace clustering algorithms (Fuzzy C-Means, Subspace K-Means)."
license = "MIT"
# repository = "https://github.com/kpassadis/cmeans-rs" # Uncomment and update this when you push to GitHub!
readme = "README.md"
keywords = ["clustering", "machine-learning", "k-means", "fuzzy", "data-mining"]
categories = ["algorithms", "science", "mathematics"]

[dependencies]
faer = "0.23"
rand = "0.9.2"

[dev-dependencies]
csv = "1.3"
itertools = "0.14"
criterion = "0.8.1"

[lib]
name = "cmeans"
path = "src/lib.rs"

[[bench]]
name = "subspace_benchmark"
harness = false